networkpolicy/nginx/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx    
  name: nginx
  namespace: pacman-dev-web
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
